<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.alaskajoslin.app</groupId>
  <artifactId>SemanticNLP</artifactId>
  <packaging>war</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>SemanticNLP</name>
  <url>http://maven.apache.org</url>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <executions>
               <execution>
                  <id>copy-dependencies</id>
                     <phase>prepare-package</phase>
                     <goals>
                        <goal>copy-dependencies</goal>
                     </goals>
                     <configuration>
                        <outputDirectory>Server/lib</outputDirectory>
                        <overWriteReleases>false</overWriteReleases>
                        <overWriteSnapshots>false</overWriteSnapshots>
                        <overWriteIfNewer>true</overWriteIfNewer>
                     </configuration>
                  </execution>
               </executions>
         </plugin>

         <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.4</version>
          <configuration>
             <outputDirectory>Server</outputDirectory>
             <archive>
               <manifest>
                 <addClasspath>true</addClasspath>
                 <classpathPrefix>lib</classpathPrefix>
                 <mainClass>com.alaskajoslin.MyApp</mainClass>
               </manifest>
             </archive>
           </configuration>
        </plugin>

	<plugin>
        	<groupId>org.apache.maven.plugins</groupId>
        	<artifactId>maven-surefire-plugin</artifactId>
        	<version>2.19.1</version>
	    	<configuration>
		    **<forkCount>0</forkCount>**
		    <includes>
	              <groups>com.alaskajoslin.app.test.group.FastRunningTests</groups>
		    </includes>
                    <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
	        </configuration> 
	</plugin>
        <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
                     <compilerArgument></compilerArgument>
                 </configuration>
        </plugin>
     </plugins>
  </build>

  <profiles>
    <profile>
        <id>fastTests</id>
        <activation>
            <activeByDefault>true</activeByDefault>
        </activation>
        <build>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <groups>com.alaskajoslin.app.test.group.FastRunningTests</groups>
                    </configuration>
                </plugin>
            </plugins>
        </build>
    </profile>
    <profile>
        <id>slowTests</id>
        <build>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <groups>com.alaskajoslin.app.test.group.SlowRunningTests</groups>
                    </configuration>
                </plugin>
            </plugins>
        </build>
    </profile>
  </profiles>

  <repositories> 
    <repository>
       <id>java.net</id>
       <url>http://download.java.net/maven/2</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <!-- this dependency is only used for running and compiling tests -->
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>5.1.31</version>
      <type>jar</type>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-web</artifactId>
      <version>2.5</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.5</version>
      <scope>compile</scope>
    </dependency>
    
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.5</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
       <version>6.0</version>
       <scope>provided</scope>
    </dependency>

    <dependency>
  	  <groupId>org.apache.tomcat</groupId>
  	  <artifactId>tomcat-servlet-api</artifactId>
  	  <version>7.0.67</version>
    </dependency>

  </dependencies>

</project>
